feat: prevent manual management of refresh tokens
